data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1080.wast
;; 1. **Test Description**:    - Create a `loop` with a simple `i32.const` instruction that loads a constant and a `br_table` with one valid branch target and an index that goes out of bounds. The test checks if `br_table` falls back to the default target correctly.    - **Constraint Checked**: Proper handling of out-of-bounds index in `br_table` and correct fallback to default target.

(assert_malformed
  (module quote
    "(func (result i32) (loop (result i32) (i32.const 2) (br_table 0 1) (i32.const 0)))"
  )
  "br_table index out of bounds"
)